[package]
name = "num-rational-parse"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A flexible string parsing extension for num_rational::Ratio, supporting fractions, decimals, and scientific notation (inspired by Python's fractions module)."
license = "MIT OR Apache-2.0"
keywords = ["rational", "math", "parsing", "fraction"]
categories = ["mathematics", "parsing"]
repository = "https://github.com/Boslx/num-rational-parse"
readme = "README.md"
include = [
    "**/*.rs",
]

[dependencies]
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
regex = "1.12"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parse"
path = "benches/parsing.rs"
harness = false
